qmllint: Fix typename conflicts

Fixes blindly overwriting conflicting typenames, instead pick whichever type provides the newest version.

Fixes: QTBUG-93241
Change-Id: Icc238cef94b33cbc7653641f7fe2feac0d219789
Reviewed-by: Andrei Golubev <andrei.golubev@qt.io>
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>